<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IMCFragment">

    <LinearLayout
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

    <TextView
        android:id="@+id/titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo"
        android:textSize="32sp"
        android:layout_gravity="center"
        android:padding="20dp"/>

    <TextView
        android:id="@+id/altura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_height"
        android:layout_gravity="center"
        android:padding="10dp"/>

    <EditText
        android:id="@+id/inputAltura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hintAltura"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:layout_gravity="center"
        android:padding="10dp"/>

    <TextView
        android:id="@+id/peso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_weight"
        android:layout_gravity="center"
        android:padding="10dp"/>

    <EditText
        android:id="@+id/inputPeso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hintPeso"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:layout_gravity="center"
        android:padding="10dp"/>

    <TextView
        android:id="@+id/resultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resultado"
        android:layout_gravity="center"
        android:padding="10dp"/>

    <Button
        android:layout_gravity="center"
        android:id="@+id/button_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calcular"
        app:icon="@drawable/ic_launcher_foreground"
        app:iconSize="50dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>